# CamLaserCalibraTool

./: CMakeLists.txt  LICENSE  README.md  README_EN.md  package.xml
apriltags_ros/apriltags/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.txt  package.xml
apriltags_ros/apriltags/include/AprilTags/: Edge.h  GLine2D.h  GLineSegment2D.h  Gridder.h  Quad.h  TagDetection.h  TagDetector.h  TagFamily.h  pch.h
apriltags_ros/apriltags/src/: Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc
apriltags_ros/apriltags/tags/: tag16h5.ps  tag16h5_other.ps  tag25h7.ps  tag25h9.ps  tag36h11.ps  tag36h11_other.ps  tag36h9.ps
apriltags_ros/apriltags_ros/: CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  nodelet_plugins.xml  package.xml
apriltags_ros/apriltags_ros/include/apriltags_ros/: apriltag_detector.h
apriltags_ros/apriltags_ros/launch/: example.launch
apriltags_ros/apriltags_ros/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg
apriltags_ros/apriltags_ros/src/: apriltag_detector.cpp  apriltag_detector_node.cpp  apriltag_detector_nodelet.cpp
camera_models/include/: Camera.h  CameraFactory.h  CataCamera.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h  Utils.h
camera_models/src/: Camera.cc  CameraFactory.cc  CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc  Utils.cc
config/: calibra_config.yaml  calibra_config_colorcamera.yaml  calibra_config_pinhole.yaml
config_and_tool/: calibra_tool.py  calibrat_config (另一个复件).yaml  calibrat_config (复件).yaml  calibrat_config.yaml
debug_code/: showscan_node.cpp
ethz_apriltag/: Edge.cc  Edge.h  FloatImage.cc  FloatImage.h  GLine2D.cc  GLine2D.h  GLineSegment2D.cc  GLineSegment2D.h  Gaussian.cc  Gaussian.h  GrayModel.cc  GrayModel.h  Gridder.h  Homography33.cc  Homography33.h  MathUtil.cc  MathUtil.h  Quad.cc  Quad.h  Segment.cc  Segment.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h  TagDetection.cc  TagDetection.h  TagDetector.cc  TagDetector.h  TagFamily.cc  TagFamily.h  UnionFindSimple.cc  UnionFindSimple.h  XYWeight.h  pch.h
include/: LaseCamCalCeres.h  calcCamPose.h  config.h  pose_local_parameterization.h  selectScanPoints.h  utilities.h
lClibra/: CMakeLists.txt  package.xml
lClibra/debug_code/: showscan_node.cpp
lClibra/include/: LaseCamCalCeres.h  config.h  selectScanPoints.h  utilities.h
lClibra/launch/: debug.launch  example.launch
lClibra/src/: LaseCamCalCeres.cpp  calib_extract.cpp  config.cpp  pose_local_parameterization.cpp  selectScanPoints.cpp  utilities.cpp
launch/: calibra_offline.launch  debug.launch  kalibra_apriltag.launch
main/: calibr_offline.cpp  calibr_online.cpp  calibr_simulation.cpp  kalibratag_detector_node.cpp
src/: LaseCamCalCeres.cpp  calcCamPose.cpp  config.cpp  selectScanPoints.cpp  utilities.cpp
