<package format="2">
  <name>lClibra</name>
  <version>1.0.0</version>
  <description>
    launch and scripts for our turtlebot.
  </description>
  
  <maintainer email="heyijia_2013@163.com">heyijia</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
</package>
