<?xml version="1.0"?>
<package>
  <name>apriltags_ros</name>
  <version>0.1.2</version>
  <description>A package that provides a ROS wrapper for the apriltags C++ package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Mitchell Wills</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/apriltags_ros</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>apriltags</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
